Correct name in title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             rel="stylesheet"
             href="//fonts.googleapis.com/icon?family=Material+Icons"
         />
-        <title>Chartr (WIP)</title>
+        <title>Tradr (WIP)</title>
     </head>
     <body>
         <div id="app"></div>
